# lucan

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_eqbench_comparison.py
.github/workflows/: code-quality.yml  tests.yml
eval/: __init__.py  eqbench_comparison.py  metrics.py
lucan/: cli.py  config.py  core.py  goals.py  loader.py  relationships.py  tools.py
lucan/tools/: __init__.py  base.py  goal_tools.py  manager.py  modifier_tools.py  registry.py  relationship_tools.py
memory/personas/lucan/: modifiers.txt  personality.txt
memory/personas/template/: README.md  modifiers.txt  personality.txt
tests/: __init__.py  conftest.py  test_absolute_adjustments.py  test_json_debug.py  test_large_adjustment_announcement.py  test_metrics.py  test_modifier_debug.py  test_set_modifier.py  test_tools.py  utils.py
